--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 .idea
 .node_modules
 node_modules
-Distribution/*
+Distribution/*.css
+Distribution/*.js
 Source/Core/Class.js.bak
 Source/Modules/Node/Node.js.bak
 Source/Modules/Node/Events.js1
