--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
 .idea
-.node_modules
 node_modules
-Distribution/*.css
-Distribution/*.js
-Source/Core/Class.js.bak
-Source/Modules/Node/Node.js.bak
-Source/Modules/Node/Events.js1
-Source/Modules/Node/Events.js2
-Source/Modules/Node/Events.js.bak
+Distribution
