Added VideoBackground Plugin

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 node_modules
 projectFilesBackup
 Distribution
+Tests/christmas_snow.jpg
+Tests/christmas_snow.mp4
+Tests/christmas_snow.ogv
+Tests/christmas_snow.webm
